--- a/index.html
+++ b/index.html
@@ -1,15 +1,172 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>CYM Leader Tracker</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body { font-family: Arial, sans-serif; background-color: #f4f4f4; padding: 20px; }
+    .hidden { display: none; }
+    .section { background: white; padding: 20px; margin-bottom: 20px; border-radius: 10px; }
+    input, select, button { padding: 8px; margin: 5px 0; width: 100%; }
+    .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 5px; margin-top: 10px; }
+    .day { padding: 10px; background: #eee; border-radius: 5px; text-align: center; }
+    .checkboxes { font-size: 12px; margin-top: 5px; }
+  </style>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <h1>CYM Leader Tracker (Login & Admin View)</h1>
-  <div id="app"></div>
-  <script src="script.js"></script>
+
+<h2>CYM Leader Tracker</h2>
+
+<div id="authSection" class="section">
+  <input id="email" type="email" placeholder="Email">
+  <input id="password" type="password" placeholder="Password">
+  <select id="role">
+    <option value="user">User</option>
+    <option value="admin">Admin</option>
+  </select>
+  <button onclick="signup()">Sign Up</button>
+  <button onclick="login()">Login</button>
+</div>
+
+<div id="userSection" class="section hidden">
+  <h3>User Dashboard</h3>
+  <input id="memberName" placeholder="Enter member name">
+  <input type="month" id="monthPicker">
+  <div id="calendarContainer"></div>
+</div>
+
+<div id="adminSection" class="section hidden">
+  <h3>Admin Dashboard</h3>
+  <div id="allUserData"></div>
+</div>
+
+<button id="logoutBtn" class="hidden" onclick="logout()">Logout</button>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyANOp3tzEMmvPzcysdu7wEQd-kCqmi1WgY",
+    authDomain: "webhandouts-e0a35.firebaseapp.com",
+    projectId: "webhandouts-e0a35",
+    storageBucket: "webhandouts-e0a35.appspot.com",
+    messagingSenderId: "284574980946",
+    appId: "1:284574980946:web:30903fcbb5dcb6e1ad388b",
+    measurementId: "G-P05PML348F"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+
+  const emailInput = document.getElementById("email");
+  const passwordInput = document.getElementById("password");
+  const roleInput = document.getElementById("role");
+
+  auth.onAuthStateChanged(async user => {
+    if (user) {
+      document.getElementById("authSection").classList.add("hidden");
+      document.getElementById("logoutBtn").classList.remove("hidden");
+
+      const doc = await db.collection("users").doc(user.uid).get();
+      const role = doc.data()?.role;
+
+      if (role === "admin") {
+        document.getElementById("adminSection").classList.remove("hidden");
+        loadAllUserData();
+      } else {
+        document.getElementById("userSection").classList.remove("hidden");
+        document.getElementById("monthPicker").addEventListener("change", renderCalendar);
+        document.getElementById("memberName").addEventListener("input", renderCalendar);
+      }
+    } else {
+      document.getElementById("authSection").classList.remove("hidden");
+      document.getElementById("userSection").classList.add("hidden");
+      document.getElementById("adminSection").classList.add("hidden");
+      document.getElementById("logoutBtn").classList.add("hidden");
+    }
+  });
+
+  async function signup() {
+    const email = emailInput.value;
+    const password = passwordInput.value;
+    const role = roleInput.value;
+
+    const userCred = await auth.createUserWithEmailAndPassword(email, password);
+    await db.collection("users").doc(userCred.user.uid).set({ email, role });
+    alert("Signup successful!");
+  }
+
+  async function login() {
+    const email = emailInput.value;
+    const password = passwordInput.value;
+    await auth.signInWithEmailAndPassword(email, password);
+  }
+
+  function logout() {
+    auth.signOut();
+  }
+
+  async function renderCalendar() {
+    const uid = auth.currentUser.uid;
+    const member = document.getElementById("memberName").value.trim();
+    const month = document.getElementById("monthPicker").value;
+
+    if (!member || !month) return;
+
+    const daysInMonth = new Date(month.split("-")[0], month.split("-")[1], 0).getDate();
+    const calendarHTML = [];
+
+    const docRef = db.collection("tracker").doc(uid + "_" + member + "_" + month);
+    let docSnap = await docRef.get();
+    if (!docSnap.exists) {
+      await docRef.set({ devotions: [], attendance: [] });
+      docSnap = await docRef.get();
+    }
+
+    const data = docSnap.data();
+    const devotions = new Set(data.devotions || []);
+    const attendance = new Set(data.attendance || []);
+
+    for (let i = 1; i <= daysInMonth; i++) {
+      const day = i.toString().padStart(2, "0");
+      calendarHTML.push(`
+        <div class="day">
+          ${day}
+          <div class="checkboxes">
+            <label><input type="checkbox" onchange="toggleCheck('${docRef.id}', 'devotions', ${i})" ${devotions.has(i) ? 'checked' : ''}> Devotion</label><br>
+            <label><input type="checkbox" onchange="toggleCheck('${docRef.id}', 'attendance', ${i})" ${attendance.has(i) ? 'checked' : ''}> Win12</label>
+          </div>
+        </div>
+      `);
+    }
+
+    document.getElementById("calendarContainer").innerHTML = `<div class="calendar">${calendarHTML.join('')}</div>`;
+  }
+
+  async function toggleCheck(docId, field, day) {
+    const ref = db.collection("tracker").doc(docId);
+    const doc = await ref.get();
+    let arr = new Set(doc.data()[field] || []);
+    arr.has(day) ? arr.delete(day) : arr.add(day);
+    await ref.update({ [field]: Array.from(arr) });
+  }
+
+  async function loadAllUserData() {
+    const snapshot = await db.collection("tracker").get();
+    const out = [];
+
+    snapshot.forEach(doc => {
+      const d = doc.data();
+      out.push(`<div class="section"><strong>${doc.id}</strong><br>
+        Devotions: ${d.devotions.length || 0} days<br>
+        Win12: ${d.attendance.length || 0} meetings</div>`);
+    });
+
+    document.getElementById("allUserData").innerHTML = out.join('');
+  }
+</script>
+
 </body>
 </html>
