--- a/index.html
+++ b/index.html
@@ -1,172 +1,227 @@
+<!-- CYM Leader Tracker Merged Version -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CYM Leader Tracker</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; padding: 20px; }
-    .hidden { display: none; }
-    .section { background: white; padding: 20px; margin-bottom: 20px; border-radius: 10px; }
-    input, select, button { padding: 8px; margin: 5px 0; width: 100%; }
-    .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 5px; margin-top: 10px; }
-    .day { padding: 10px; background: #eee; border-radius: 5px; text-align: center; }
-    .checkboxes { font-size: 12px; margin-top: 5px; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #222;
+      color: white;
+      padding: 1em;
+      text-align: center;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 1em;
+    }
+    .section {
+      background: white;
+      padding: 1em;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .month-selector {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-bottom: 1em;
+    }
+    .month-selector button {
+      padding: 0.5em 1em;
+      border: none;
+      background: #ccc;
+      cursor: pointer;
+    }
+    .month-selector button.active {
+      background: #4CAF50;
+      color: white;
+    }
+    .calendar {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      gap: 5px;
+      margin-top: 1em;
+    }
+    .calendar div {
+      background: #fff;
+      border: 1px solid #ccc;
+      padding: 0.5em;
+      text-align: center;
+      font-size: 14px;
+    }
+    .calendar input[type="checkbox"] {
+      margin-top: 5px;
+    }
+    .attendance-section {
+      margin-top: 2em;
+    }
+    .attendance-section label {
+      font-weight: bold;
+      display: block;
+      margin-top: 1em;
+    }
+    .attendance-grid {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 4px;
+      margin-top: 0.5em;
+    }
+    .attendance-grid button {
+      padding: 0.4em;
+      background: #eee;
+      border: 1px solid #ccc;
+      cursor: pointer;
+    }
+    .attendance-grid button.P { background: #4CAF50; color: white; }
+    .attendance-grid button.A { background: #f44336; color: white; }
+    .attendance-grid button.NM { background: #999; color: white; }
+    #logoutBtn { margin-top: 10px; }
   </style>
+  <!-- Firebase Scripts -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 </head>
 <body>
+  <header>
+    <h1>CYM 2025 Leader Tracker</h1>
+    <div id="user-info"></div>
+  </header>
 
-<h2>CYM Leader Tracker</h2>
+  <div class="container">
+    <div id="authSection" class="section">
+      <input id="email" type="email" placeholder="Email" />
+      <input id="password" type="password" placeholder="Password" />
+      <select id="role">
+        <option value="user">User</option>
+        <option value="admin">Admin</option>
+      </select>
+      <button onclick="signup()">Sign Up</button>
+      <button onclick="login()">Login</button>
+    </div>
 
-<div id="authSection" class="section">
-  <input id="email" type="email" placeholder="Email">
-  <input id="password" type="password" placeholder="Password">
-  <select id="role">
-    <option value="user">User</option>
-    <option value="admin">Admin</option>
-  </select>
-  <button onclick="signup()">Sign Up</button>
-  <button onclick="login()">Login</button>
-</div>
+    <div id="userSection" class="section hidden">
+      <label><strong>Insert Name:</strong></label>
+      <input type="text" id="username" placeholder="Type your full name..." />
+      <div class="month-selector" id="month-selector"></div>
+      <h2 id="month-title">January</h2>
+      <h3>DEVOTION: <span id='devotion-count'>0</span> days checked</h3>
+      <div id="calendar" class="calendar"></div>
+      <div class="attendance-section" id="attendance-forms"></div>
+    </div>
 
-<div id="userSection" class="section hidden">
-  <h3>User Dashboard</h3>
-  <input id="memberName" placeholder="Enter member name">
-  <input type="month" id="monthPicker">
-  <div id="calendarContainer"></div>
-</div>
+    <div id="adminSection" class="section hidden">
+      <h3>Admin Dashboard</h3>
+      <div id="allUserData"></div>
+    </div>
 
-<div id="adminSection" class="section hidden">
-  <h3>Admin Dashboard</h3>
-  <div id="allUserData"></div>
-</div>
+    <button id="logoutBtn" class="hidden" onclick="logout()">Logout</button>
+  </div>
 
-<button id="logoutBtn" class="hidden" onclick="logout()">Logout</button>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyANOp3tzEMmvPzcysdu7wEQd-kCqmi1WgY",
+      authDomain: "webhandouts-e0a35.firebaseapp.com",
+      projectId: "webhandouts-e0a35",
+      storageBucket: "webhandouts-e0a35.appspot.com",
+      messagingSenderId: "284574980946",
+      appId: "1:284574980946:web:30903fcbb5dcb6e1ad388b"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
 
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyANOp3tzEMmvPzcysdu7wEQd-kCqmi1WgY",
-    authDomain: "webhandouts-e0a35.firebaseapp.com",
-    projectId: "webhandouts-e0a35",
-    storageBucket: "webhandouts-e0a35.appspot.com",
-    messagingSenderId: "284574980946",
-    appId: "1:284574980946:web:30903fcbb5dcb6e1ad388b",
-    measurementId: "G-P05PML348F"
-  };
+    const months = ["January","February","March","April","May","June","July","August","September","October","November","December"];
+    const sections = ["W12 MEETING","W12 DISCIPLESHIP","CELL GROUP","SUNDAY SERVICE","CYM NIGHT","THURSDAY TRAINING","PRAYER MEETING"];
+    const daysInMonth = (m, y) => new Date(y, m + 1, 0).getDate();
 
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
+    let currentMonth = 0;
 
-  const emailInput = document.getElementById("email");
-  const passwordInput = document.getElementById("password");
-  const roleInput = document.getElementById("role");
+    function renderMonthButtons() {
+      const container = document.getElementById("month-selector");
+      container.innerHTML = "";
+      months.forEach((m, i) => {
+        const btn = document.createElement("button");
+        btn.textContent = m;
+        btn.classList.toggle("active", i === 0);
+        btn.onclick = () => {
+          currentMonth = i;
+          [...document.querySelectorAll(".month-selector button")].forEach(b => b.classList.remove("active"));
+          btn.classList.add("active");
+          renderCalendar();
+          renderAttendance();
+        };
+        container.appendChild(btn);
+      });
+    }
 
-  auth.onAuthStateChanged(async user => {
-    if (user) {
-      document.getElementById("authSection").classList.add("hidden");
-      document.getElementById("logoutBtn").classList.remove("hidden");
+    auth.onAuthStateChanged(async user => {
+      if (user) {
+        document.getElementById("authSection").classList.add("hidden");
+        document.getElementById("logoutBtn").classList.remove("hidden");
 
-      const doc = await db.collection("users").doc(user.uid).get();
-      const role = doc.data()?.role;
+        const doc = await db.collection("users").doc(user.uid).get();
+        const role = doc.data()?.role;
 
-      if (role === "admin") {
-        document.getElementById("adminSection").classList.remove("hidden");
-        loadAllUserData();
+        if (role === "admin") {
+          document.getElementById("adminSection").classList.remove("hidden");
+          loadAllUserData();
+        } else {
+          document.getElementById("userSection").classList.remove("hidden");
+          renderMonthButtons();
+          renderCalendar();
+          renderAttendance();
+        }
       } else {
-        document.getElementById("userSection").classList.remove("hidden");
-        document.getElementById("monthPicker").addEventListener("change", renderCalendar);
-        document.getElementById("memberName").addEventListener("input", renderCalendar);
+        document.getElementById("authSection").classList.remove("hidden");
+        document.getElementById("userSection").classList.add("hidden");
+        document.getElementById("adminSection").classList.add("hidden");
+        document.getElementById("logoutBtn").classList.add("hidden");
       }
-    } else {
-      document.getElementById("authSection").classList.remove("hidden");
-      document.getElementById("userSection").classList.add("hidden");
-      document.getElementById("adminSection").classList.add("hidden");
-      document.getElementById("logoutBtn").classList.add("hidden");
-    }
-  });
-
-  async function signup() {
-    const email = emailInput.value;
-    const password = passwordInput.value;
-    const role = roleInput.value;
-
-    const userCred = await auth.createUserWithEmailAndPassword(email, password);
-    await db.collection("users").doc(userCred.user.uid).set({ email, role });
-    alert("Signup successful!");
-  }
-
-  async function login() {
-    const email = emailInput.value;
-    const password = passwordInput.value;
-    await auth.signInWithEmailAndPassword(email, password);
-  }
-
-  function logout() {
-    auth.signOut();
-  }
-
-  async function renderCalendar() {
-    const uid = auth.currentUser.uid;
-    const member = document.getElementById("memberName").value.trim();
-    const month = document.getElementById("monthPicker").value;
-
-    if (!member || !month) return;
-
-    const daysInMonth = new Date(month.split("-")[0], month.split("-")[1], 0).getDate();
-    const calendarHTML = [];
-
-    const docRef = db.collection("tracker").doc(uid + "_" + member + "_" + month);
-    let docSnap = await docRef.get();
-    if (!docSnap.exists) {
-      await docRef.set({ devotions: [], attendance: [] });
-      docSnap = await docRef.get();
-    }
-
-    const data = docSnap.data();
-    const devotions = new Set(data.devotions || []);
-    const attendance = new Set(data.attendance || []);
-
-    for (let i = 1; i <= daysInMonth; i++) {
-      const day = i.toString().padStart(2, "0");
-      calendarHTML.push(`
-        <div class="day">
-          ${day}
-          <div class="checkboxes">
-            <label><input type="checkbox" onchange="toggleCheck('${docRef.id}', 'devotions', ${i})" ${devotions.has(i) ? 'checked' : ''}> Devotion</label><br>
-            <label><input type="checkbox" onchange="toggleCheck('${docRef.id}', 'attendance', ${i})" ${attendance.has(i) ? 'checked' : ''}> Win12</label>
-          </div>
-        </div>
-      `);
-    }
-
-    document.getElementById("calendarContainer").innerHTML = `<div class="calendar">${calendarHTML.join('')}</div>`;
-  }
-
-  async function toggleCheck(docId, field, day) {
-    const ref = db.collection("tracker").doc(docId);
-    const doc = await ref.get();
-    let arr = new Set(doc.data()[field] || []);
-    arr.has(day) ? arr.delete(day) : arr.add(day);
-    await ref.update({ [field]: Array.from(arr) });
-  }
-
-  async function loadAllUserData() {
-    const snapshot = await db.collection("tracker").get();
-    const out = [];
-
-    snapshot.forEach(doc => {
-      const d = doc.data();
-      out.push(`<div class="section"><strong>${doc.id}</strong><br>
-        Devotions: ${d.devotions.length || 0} days<br>
-        Win12: ${d.attendance.length || 0} meetings</div>`);
     });
 
-    document.getElementById("allUserData").innerHTML = out.join('');
-  }
-</script>
+    async function signup() {
+      const email = email.value;
+      const password = password.value;
+      const roleVal = role.value;
+      const userCred = await auth.createUserWithEmailAndPassword(email, password);
+      await db.collection("users").doc(userCred.user.uid).set({ email, role: roleVal });
+      alert("Signup successful!");
+    }
 
-</body>
-</html>
+    async function login() {
+      await auth.signInWithEmailAndPassword(email.value, password.value);
+    }
+
+    function logout() {
+      auth.signOut();
+    }
+
+    function updateDevotionCount(devotions) {
+      document.getElementById("devotion-count").textContent = devotions.size;
+    }
+
+    async function renderCalendar() {
+      const uid = auth.currentUser.uid;
+      const member = document.getElementById("username").value.trim();
+      if (!member) return;
+
+      const month = currentMonth;
+      const year = 2025;
+      const days = daysInMonth(month, year);
+      monthTitle.textContent = months[month];
+      const docId = `${uid}_${member}_${year}-${String(month+1).padStart(2, '0')}`;
+      const ref = db.collection("tracker").doc(docId);
+      let snap = await ref.get();
+      if (!snap.exists) await ref.set({ devotions: [], attendance: {} });
+      const data = snap.data
