--- a/index.html
+++ b/index.html
@@ -224,4 +224,104 @@
       const ref = db.collection("tracker").doc(docId);
       let snap = await ref.get();
       if (!snap.exists) await ref.set({ devotions: [], attendance: {} });
-      const data = snap.data
+       const data = snap.data();
+      const devotions = new Set(data.devotions || []);
+      updateDevotionCount(devotions);
+
+      const calendar = document.getElementById("calendar");
+      calendar.innerHTML = "";
+
+      const weekdays = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
+      weekdays.forEach(day => {
+        const cell = document.createElement("div");
+        cell.style.fontWeight = "bold";
+        cell.textContent = day;
+        calendar.appendChild(cell);
+      });
+
+      const firstDay = new Date(year, month, 1).getDay();
+      for (let i = 0; i < firstDay; i++) {
+        calendar.appendChild(document.createElement("div"));
+      }
+
+      for (let i = 1; i <= days; i++) {
+        const cell = document.createElement("div");
+        const checkbox = document.createElement("input");
+        checkbox.type = "checkbox";
+        checkbox.checked = devotions.has(i);
+        checkbox.onchange = async () => {
+          devotions.has(i) ? devotions.delete(i) : devotions.add(i);
+          await ref.update({ devotions: Array.from(devotions) });
+          updateDevotionCount(devotions);
+        };
+        cell.innerHTML = `${i}<br>`;
+        cell.appendChild(checkbox);
+        calendar.appendChild(cell);
+      }
+    }
+
+    async function renderAttendance() {
+      const uid = auth.currentUser.uid;
+      const member = document.getElementById("username").value.trim();
+      if (!member) return;
+
+      const month = currentMonth;
+      const year = 2025;
+      const docId = `${uid}_${member}_${year}-${String(month+1).padStart(2, '0')}`;
+      const ref = db.collection("tracker").doc(docId);
+      let snap = await ref.get();
+      if (!snap.exists) await ref.set({ devotions: [], attendance: {} });
+      const data = snap.data();
+      const attendance = data.attendance || {};
+
+      const container = document.getElementById("attendance-forms");
+      container.innerHTML = `
+        <strong>FULL MONTH ATTENDANCE</strong><br/>
+        <strong>Legend:</strong> <span style='color:green'>Green = Present</span>, 
+        <span style='color:red'>Red = Absent</span>, 
+        <span style='color:gray'>Gray = No Meeting</span><br/><br/>
+      `;
+
+      sections.forEach(section => {
+        const label = document.createElement("label");
+        label.textContent = section;
+        container.appendChild(label);
+
+        const grid = document.createElement("div");
+        grid.className = "attendance-grid";
+        const weeks = attendance[section] || ["NM","NM","NM","NM","NM"];
+
+        weeks.forEach((status, i) => {
+          const btn = document.createElement("button");
+          const nextStatus = { "P": "A", "A": "NM", "NM": "P" };
+          btn.textContent = ["1st","2nd","3rd","4th","5th"][i] + " week";
+          btn.className = status;
+          btn.onclick = async () => {
+            weeks[i] = nextStatus[weeks[i]];
+            await ref.update({ attendance: { ...attendance, [section]: weeks } });
+            renderAttendance(); // re-render for updated styles
+          };
+          grid.appendChild(btn);
+        });
+
+        container.appendChild(grid);
+      });
+    }
+
+    async function loadAllUserData() {
+      const snapshot = await db.collection("tracker").get();
+      const out = [];
+
+      snapshot.forEach(doc => {
+        const d = doc.data();
+        const dev = d.devotions?.length || 0;
+        const att = Object.values(d.attendance || {}).reduce((total, arr) =>
+          total + arr.filter(a => a === "P").length, 0);
+        out.push(`<div class="section"><strong>${doc.id}</strong><br>Devotions: ${dev} days<br>Win12: ${att} meetings</div>`);
+      });
+
+      document.getElementById("allUserData").innerHTML = out.join('');
+    }
+  </script>
+</body>
+</html>
